src/objects/PSASKUMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Is_Travel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates a travel product</description>
        <inlineHelpText>Designates a travel product</inlineHelpText>
        <label>Is Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NonBillable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlanFactor__c</fullName>
        <label>Plan Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlanHours__c</fullName>
        <label>Plan Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role to use when creating resource requests</description>
        <inlineHelpText>Role to use when creating resource requests</inlineHelpText>
        <label>Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>PSA SKU Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>Is_Travel__c</columns>
        <columns>Role__c</columns>
        <columns>NonBillable__c</columns>
        <columns>PlanFactor__c</columns>
        <columns>PlanHours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>